--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ h5 {
 .hero h2 {
   color: white;
   margin-top: 10rem;
-  margin-bottom: 5rem;
+
   font-weight: 800;
   text-shadow: 2px 2px rgba(139, 235, 182, 0.432);
   animation-duration: 2s;
@@ -160,45 +160,93 @@ h5 {
 }
 /********/
 /* about section*/
+#about {
+  background-image: url(Images/secondBack.jpg);
+}
 
 .line-1 {
   position: relative;
+  max-width: 100%;
   border: 2px solid rgb(8, 8, 8);
   width: 300vh;
   left: -10%;
   animation: 10s pencilDraw ease-in-out infinite;
-}
-
-/***** About us section */
-#about {
-  min-height: 100vh;
-  background-image: linear-gradient(rgba(214, 207, 207, 0.76), transparent),
-    url(Images/secondBack.jpg);
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   overflow: hidden;
 }
-.about-head {
-  width: 90%;
+.container-about {
+  max-width: 1100px;
   margin: auto;
+  overflow: auto;
+  padding: 0 2rem;
 }
-.about-head h2 {
-  padding: 1rem 1rem;
-  text-decoration: underline;
+.main-header1 {
+  height: 44vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 2rem;
 }
-
-.about-head h3 {
-  padding: 2rem 1rem;
+.main-header1 h1 {
+  font-size: 4rem;
+  margin-bottom: 2rem;
+  line-height: 1.2;
 }
-.about-pic {
-  height: 500px;
-  width: 250px;
+.main-header1 h1 span {
+  color: #fbf7f7;
+}
+.main-header1 p {
+  font-size: 3rem;
+}
+.container-about img {
+  width: 100%;
+}
+.card {
+  display: grid;
+  border-radius: 3rem;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2rem;
+  background: #e9e0e0;
+  margin-bottom: 2rem;
+}
+.card h3 {
+  margin-bottom: 2rem;
+}
+.card img {
+  height: 400px;
+}
+.card > div {
+  padding: 2rem;
+}
+.card:nth-child(even) img {
+  order: 2;
+}
+@media (max-width: 700px) {
+  .card {
+    display: block;
+  }
 }
 
 /* end of about section */
+
+/*** Contact Us section */
+.contact-form {
+  width: 80%;
+  max-width: 600px;
+  background: #f1f1f1;
+  position: relative;
+
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 30px 40px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  text-align: center;
+  box-shadow: 0 0 20px #000000b3;
+}
+
+/*** End of contact us Section */
 
 /* animation section */
 @keyframes slideInLeft {
