--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth !important;
+  background: whitesmoke;
 }
 
 h1 {
@@ -33,15 +35,17 @@ h5 {
 
 /*Navigation Bar*/
 
-.mainHeader {
-  background-color: #0d1124de;
-}
 
+.logo-img{
+  height: 50px;
+  width: 50px;
+}
 .mainHeader nav {
   color: white;
+  background-color: whitesmoke;
   min-height: 10vh;
   display: flex;
-  width: 95%;
+  width: 100%;
   padding: 3rem;
   margin: auto;
   align-items: center;
@@ -52,25 +56,34 @@ h5 {
   color: white;
   text-decoration: none;
   font-size: 3rem;
+  padding: 1rem 3rem;
+  margin: 0;
+  font-size: 4rem;
+  font-weight: 900;
+  background: rgba(54, 132, 156, 0.904);
+  border: 2px transparent black; 
+  border-radius: 10px;
 }
+
+
 .mainHeader ul {
   display: flex;
   list-style: none;
-  flex: 2 1 30rem;
+  flex: 1 1 30rem;
   justify-content: space-around;
   align-items: center;
 }
 
 #logo {
-  flex: 1 1 20rem;
   font-family: "Amiri", serif;
   font-size: 4rem;
+  border: 0px;
+  background: whitesmoke;
 }
 
 /* arabic text intro section */
 .hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.637), transparent),
-    url(Images/firstBack.jpg);
+  background-color: whitesmoke;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -80,22 +93,21 @@ h5 {
   position: relative;
 }
 .hero h2 {
-  color: white;
+  color: 14111A;
   margin-top: 10rem;
-
   font-weight: 800;
-  text-shadow: 2px 2px rgba(139, 235, 182, 0.432);
   animation-duration: 2s;
   animation-timing-function: ease-in-out;
   animation-delay: 0s;
   animation-iteration-count: 1;
   animation-name: slideInLeft;
+  font-family: 'Lateef', cursive;
 }
 .hero h3 {
-  color: white;
+  color: black;
   margin: 5rem;
-  text-shadow: 2px 2px rgba(17, 17, 16, 0.432);
-  font-weight: 300;
+  font-family: 'Lateef', cursive;
+  font-size: 4rem;
   padding-bottom: 1rem;
   animation-duration: 2s;
   animation-timing-function: ease-in-out;
@@ -104,26 +116,24 @@ h5 {
   animation-name: slideInRight;
 }
 
-.hero button {
+.button {
   position: relative;
   margin-top: 10px;
   font-size: 3rem;
+  margin-top: 3rem;
   font-family: "Amiri", serif;
   padding: 2rem 4rem;
-  background-color: rgba(16, 7, 75, 0.74);
+  background-color: rgba(54, 132, 156, 0.904);
   color: white;
   border-radius: 10px;
   animation-duration: 2s;
-  animation-timing-function: ease-in-out;
-  animation-delay: 0s;
-  animation-iteration-count: 1;
-  animation-name: showButton;
   border: none;
   cursor: pointer;
+  text-decoration: none;
 }
-.hero button:hover {
+.hero .button :hover {
   background-color: rgb(17, 156, 68);
-  transition: 0.4s ease-in-out;
+  transition: 1s ease-in-out ;
 }
 /* **** */
 /* image gallery*/
@@ -131,17 +141,17 @@ h5 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 810px;
-  height: 410px;
-  background-color: rgba(46, 44, 44, 0.075);
+  width: 1005px;
+  height: 505px;
+  background: repeating-linear-gradient(#ACB6B2,#B2ACB6);
   border-radius: 10px;
   animation: inverseHide 2s ease-in-out;
-  animation: colorchange 2s ease-in-out;
+  box-shadow: 10px grey solid ;
 }
 #slider {
   overflow: hidden;
-  height: 400px;
-  width: 800px;
+  height: 500px;
+  width: 1000px;
   border-radius: 10px;
   animation: 2s hideandseek ease-in-out;
 }
@@ -155,28 +165,19 @@ h5 {
 #slider figure img {
   width: 20%;
   float: left;
-  height: 400px;
-  width: 800px;
+  height: 500px;
+  width: 1000px;
 }
 /********/
 /* about section*/
-#about {
-  background-image: url(Images/secondBack.jpg);
-}
 
-.line-1 {
-  position: relative;
-  max-width: 100%;
-  border: 2px solid rgb(8, 8, 8);
-  width: 300vh;
-  left: -10%;
-  animation: 10s pencilDraw ease-in-out infinite;
-  overflow: hidden;
+#about{
+  background: whitesmoke;
 }
 .container-about {
   max-width: 1100px;
   margin: auto;
-  overflow: auto;
+  overflow: hidden;
   padding: 0 2rem;
 }
 .main-header1 {
@@ -194,7 +195,7 @@ h5 {
   line-height: 1.2;
 }
 .main-header1 h1 span {
-  color: #fbf7f7;
+  color: #660303;
 }
 .main-header1 p {
   font-size: 3rem;
@@ -204,17 +205,23 @@ h5 {
 }
 .card {
   display: grid;
+  padding: 4rem 4rem;
   border-radius: 3rem;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2rem;
-  background: #e9e0e0;
-  margin-bottom: 2rem;
+  background: linear-gradient(rgba(8, 30, 155, 0.658),transparent);
+  margin-bottom: 10rem;
+  overflow: hidden;
 }
 .card h3 {
   margin-bottom: 2rem;
 }
 .card img {
-  height: 400px;
+  border-radius: 20px;
+  overflow: hidden;
+  max-width: 80%;
+  height: auto;
+  box-shadow: 5px 2px 5px rgb(65, 61, 61);
 }
 .card > div {
   padding: 2rem;
@@ -222,29 +229,74 @@ h5 {
 .card:nth-child(even) img {
   order: 2;
 }
+.card:nth-child(even){
+  background: linear-gradient(transparent,rgba(50, 5, 92, 0.705));
+
+}
+@media (max-width: 900px){
+  .mainHeader a{
+    border: none;
+    background-color: whitesmoke;
+    color: black;
+  }
+}
 @media (max-width: 700px) {
   .card {
     display: block;
   }
+  .mainHeader a{
+    border: none;
+    background-color: whitesmoke;
+    color: black;
+    font-size: 2rem;
+  }
+  .mainHeader ul{
+    flex: 1 1 10vh;
+  }
 }
 
 /* end of about section */
+/*  projects section */
+
+.maincard{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 2rem;
+  background:linear-gradient(whitesmoke, rgba(54, 132, 156, 0.904));
+}
+.card-container{
+background:linear-gradient(whitesmoke,rgba(189, 118, 11, 0.507));
+clip-path: margin-box;
+border-radius: 50px;
+}
+.card1{
+  width: 100vh;
+  height: 44vh;
+  display: grid;
+  padding: 4rem 4rem;
+  border-radius: 3rem;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2rem;
+  background: linear-gradient(rgba(8, 30, 155, 0.658),transparent);
+  margin-bottom: 10rem;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 10rem 4rem;
+}
+.card1 img{
+  width: 50px;
+  height: 50px;
+}
+/* end of projects section /*
 
 /*** Contact Us section */
-.contact-form {
-  width: 80%;
-  max-width: 600px;
-  background: #f1f1f1;
-  position: relative;
 
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 30px 40px;
-  box-sizing: border-box;
-  border-radius: 8px;
-  text-align: center;
-  box-shadow: 0 0 20px #000000b3;
-}
+
 
 /*** End of contact us Section */
 
@@ -328,14 +380,7 @@ h5 {
   }
 }
 
-@keyframes colorchange {
-  0% {
-    background-color: rgba(16, 56, 36, 0.384);
-  }
-  100% {
-    background-color: rgba(46, 44, 44, 0.075);
-  }
-}
+
 @keyframes slideInLeftPencil {
   0% {
     left: -100%;
