--- a/style.css
+++ b/style.css
@@ -36,31 +36,25 @@ h5 {
 /*Navigation Bar*/
 
 
-.logo-img{
-  height: 50px;
-  width: 50px;
-}
 .mainHeader nav {
   color: white;
   background-color: whitesmoke;
   min-height: 10vh;
   display: flex;
   width: 100%;
-  padding: 3rem;
+  padding: 2rem;
   margin: auto;
   align-items: center;
   font-family: "Katibeh", cursive;
   flex-wrap: wrap;
 }
 .mainHeader a {
-  color: white;
+  color: rgb(0, 0, 0);
   text-decoration: none;
-  font-size: 3rem;
-  padding: 1rem 3rem;
+  padding: 1rem 1rem;
   margin: 0;
-  font-size: 4rem;
-  font-weight: 900;
-  background: rgba(54, 132, 156, 0.904);
+  font-size: 8vh;
+  font-weight: 800;
   border: 2px transparent black; 
   border-radius: 10px;
 }
@@ -75,9 +69,8 @@ h5 {
 }
 
 #logo {
-  font-family: "Amiri", serif;
-  font-size: 4rem;
-  border: 0px;
+  height: 10;
+  width: 8vw;
   background: whitesmoke;
 }
 
@@ -141,8 +134,8 @@ h5 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 1005px;
-  height: 505px;
+  width: 61vw;
+  height: 50vh;
   background: repeating-linear-gradient(#ACB6B2,#B2ACB6);
   border-radius: 10px;
   animation: inverseHide 2s ease-in-out;
@@ -150,8 +143,8 @@ h5 {
 }
 #slider {
   overflow: hidden;
-  height: 500px;
-  width: 1000px;
+  height: 49vh;
+  width: 60vw;
   border-radius: 10px;
   animation: 2s hideandseek ease-in-out;
 }
@@ -165,8 +158,8 @@ h5 {
 #slider figure img {
   width: 20%;
   float: left;
-  height: 500px;
-  width: 1000px;
+  height: 49vh;
+  width: 60vw;
 }
 /********/
 /* about section*/
@@ -205,8 +198,9 @@ h5 {
 }
 .card {
   display: grid;
-  padding: 4rem 4rem;
+  padding: 2rem 4rem;
   border-radius: 3rem;
+  height: 50vh;
   grid-template-columns: 1fr 1fr;
   grid-gap: 2rem;
   background: linear-gradient(rgba(8, 30, 155, 0.658),transparent);
@@ -214,14 +208,14 @@ h5 {
   overflow: hidden;
 }
 .card h3 {
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
 }
 .card img {
   border-radius: 20px;
   overflow: hidden;
   max-width: 80%;
   height: auto;
-  box-shadow: 5px 2px 5px rgb(65, 61, 61);
+  box-shadow: 10px 2px 5px rgb(65, 61, 61);
 }
 .card > div {
   padding: 2rem;
@@ -231,15 +225,8 @@ h5 {
 }
 .card:nth-child(even){
   background: linear-gradient(transparent,rgba(50, 5, 92, 0.705));
+}
 
-}
-@media (max-width: 900px){
-  .mainHeader a{
-    border: none;
-    background-color: whitesmoke;
-    color: black;
-  }
-}
 @media (max-width: 700px) {
   .card {
     display: block;
@@ -248,16 +235,16 @@ h5 {
     border: none;
     background-color: whitesmoke;
     color: black;
-    font-size: 2rem;
+    font-size: 4rem;
   }
   .mainHeader ul{
     flex: 1 1 10vh;
   }
 }
-
 /* end of about section */
-/*  projects section */
 
+
+/*  projects section */
 .maincard{
   display: flex;
   flex-direction: column;
@@ -268,13 +255,13 @@ h5 {
   background:linear-gradient(whitesmoke, rgba(54, 132, 156, 0.904));
 }
 .card-container{
-background:linear-gradient(whitesmoke,rgba(189, 118, 11, 0.507));
+background:linear-gradient(whitesmoke,transparent);
 clip-path: margin-box;
 border-radius: 50px;
 }
 .card1{
-  width: 100vh;
-  height: 44vh;
+  width: 80vw;
+  height: 50vh;
   display: grid;
   padding: 4rem 4rem;
   border-radius: 3rem;
@@ -289,15 +276,101 @@ border-radius: 50px;
   margin: 10rem 4rem;
 }
 .card1 img{
-  width: 50px;
-  height: 50px;
+  width: 20vh;
+  height: 20vh;
+}
+.card1:nth-child(even){
+  background: linear-gradient(transparent,red);
 }
 /* end of projects section /*
 
 /*** Contact Us section */
+.contact{
+  position: relative;
+  min-height: 80vh;
+  padding: 5vw 2vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(rgba(54, 132, 156, 0.904),whitesmoke);
+}
+.contact .content{
+  max-width: 70vw;
+  text-align: center;
+}
+.contact .content h2{
+  font-size: 5rem;
+  font-weight: 800;
+  padding: 3rem 1rem;
+}
+.contact .content p{
+  font-weight: 400;
+  font-size: 3rem;
+}
+.container2{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10vh;
+}
+.container2 .contactinfo{
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+}
+.container2 .contactinfo .box{
+  position: relative;
+  padding: 2rem;
+}
+.container2 .contactinfo .box .icon{
+  min-width: 40px;
+  height: 40px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 5rem;
+}
+.container2 .contactinfo .box .text{
+  display: flex;
+  margin-left: 2rem;
+  font-size: 3rem;
+  flex-direction: column;
+  font-weight: 400;
+}
+.contactForm{
+  width: 50%;
+  padding: 5rem;
+  background: linear-gradient(red,transparent);
 
+}
+.contactForm h2{
+  font-size: 4rem;
+  color: #fff;
 
-
+}
+.contactForm .inputBox{
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+.contactForm .inputBox input{
+  width: 100%;
+  padding: 5px 0;
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+.contactForm .inputBox textarea{
+  width: 100%;
+  padding: 5px 0;
+  margin: 1rem 0;
+}
+.contactForm span{
+  font-size: 2rem;
+}
 /*** End of contact us Section */
 
 /* animation section */
