--- a/style.css
+++ b/style.css
@@ -283,7 +283,10 @@ border-radius: 50px;
   color: #fff;
 }
 .card1:nth-child(even){
-  background: linear-gradient(transparent,red);
+  background: rgba(10, 182, 33, 0.699);
+}
+.card1:nth-child(even) p,h2,h3{
+  color: black;
 }
 /* end of projects section /*
 
@@ -311,6 +314,10 @@ border-radius: 50px;
   font-weight: 400;
   font-size: 3rem;
 }
+.contactinfo .box .text h3{
+  color: black;
+
+}
 .container2{
   width: 100%;
   display: flex;
@@ -326,16 +333,16 @@ border-radius: 50px;
 }
 .container2 .contactinfo .box{
   position: relative;
-  padding: 2rem;
+  padding: 3rem;
 }
 .container2 .contactinfo .box .icon{
-  min-width: 40px;
-  height: 40px;
+  min-width: 60px;
+  height: 59px;
   background: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 50%;
+  border-radius: 40%;
   font-size: 5rem;
 }
 .container2 .contactinfo .box .text{
@@ -343,13 +350,13 @@ border-radius: 50px;
   margin-left: 2rem;
   font-size: 3rem;
   flex-direction: column;
-  font-weight: 400;
+  font-weight: 800;
 }
 .contactForm{
   border-radius:30px;
   width: 50%;
   padding: 5rem;
-  background: #4D5382;
+  background: -webkit-linear-gradient(rgba(54, 132, 156, 0.904),rgb(17, 17, 109));
 
 }
 .contactForm h2{
@@ -358,6 +365,7 @@ border-radius: 50px;
 }
 
 .contactForm .inputBox{
+  margin-bottom: 1rem;
   position: relative;
   width: 100%;
   margin-top: 10px;
@@ -374,6 +382,12 @@ border-radius: 50px;
   margin: 1rem 0;
 }
 
+.contactForm .inputBox #submit:hover{
+  background: rgb(128, 197, 25);
+  color: white;
+  transition: 0.5s ease-in-out;
+}
+
 .contactForm span{
   color: #fff;
   font-size: 2rem;
@@ -384,13 +398,18 @@ border-radius: 50px;
 footer{
   display: flex;
   text-align: start;
+  align-items: center;
+  justify-content: space-around;
+  background: rgba(0, 0, 0, 0.548);
 }
 footer h2{
-  font-size: 2vw;
+  color: #fff;
+  font-size: 2rem;
 }
 footer span{
-  padding-right: 10rem;
+  color: whitesmoke;
 }
+
 
 /* animation section */
 @keyframes slideInLeft {
